<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_bright"
    android:orientation="vertical">
    <!--
        <include layout="@layout/toolbar_search" />
    -->
    <com.github.florent37.diagonallayout.DiagonalLayout
        android:id="@+id/diagonalLayout"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:clickable="false"
        diagonal:diagonal_angle="10"
        diagonal:diagonal_direction="right"
        diagonal:diagonal_handleMargins="true"
        diagonal:diagonal_position="bottom">

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/kenBurnsView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_light2"
            android:clickable="false"
            android:longClickable="false"
            android:scaleType="centerCrop"
            android:src="@drawable/noimage" />

        <TextView
            android:id="@+id/tv_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginLeft="@dimen/margin_big"
            android:layout_marginStart="@dimen/margin_big"
            android:layout_marginTop="70dp"
            android:fontFamily="sans-serif-light"
            android:text=""
            android:textColor="@color/white"
            android:textSize="25sp" />

    </com.github.florent37.diagonallayout.DiagonalLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:layout_marginTop="-35dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="4">
        <!--
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:src="@drawable/avatar" />
            -->

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/diagonalLayout"
            android:layout_weight="1"
            android:orientation="vertical">
            <!--
            -->
            <TextView
                android:id="@+id/textViewLabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/size"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_normal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/diagonalLayout"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/age"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_normal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/diagonalLayout"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLabel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/gender"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_normal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_big"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/dark_grey" />



    <ScrollView
        android:id="@+id/sv_shopping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_output"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="@dimen/margin_big"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_big"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ll_boxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:baselineAligned="false"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_label_breed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breed"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/tv_breed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dark_grey" />


            <TextView
                android:id="@+id/tv_label_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_grey" />


            <TextView
                android:id="@+id/tv_label_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/contact"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_grey" />


            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/dark_grey" />


            <ViewFlipper
                android:id="@+id/viewflipper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoStart="true"
                android:flipInterval="7000"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>